# raincloudy

./: .coveragerc  .flake8  .gitignore  .hound.yml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  index.md  index.py  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  requirements_tests.txt  setup.py  tox.ini
.github/workflows/: build.yml  test.yml  wheels.yml
docs/: Makefile
docs/source/: conf.py  index.rst
raincloudy/: __init__.py  const.py  controller.py  core.py  exceptions.py  faucet.py  helpers.py  wifiaquatimer_com_chain.cer
raincloudy/aio/: __init__.py  controller.py  core.py  faucet.py
tests/: __init__.py  extras.py  test_base.py  test_base_aio.py  test_controller.py  test_controller_aio.py  test_controller_post.py  test_controller_request.py  test_core.py  test_core_aio.py  test_faucet.py  test_faucet_aio.py  test_faucet_post.py  test_faucet_request.py  test_faucet_zone.py  test_faucet_zone_aio.py  test_faucet_zone_post.py  test_foobar.py  test_helpers.py
tests/fixtures/: get_cu_and_fu_status.json  home.html  home_broken.html  home_no_serial.html  setup.html
